@@ -1,6 +1,9 @@
 -------------------------------------------------------------------------------
 Changes in version 0.90
 
+- Added support for explicit application of mail rules to senders or
+  recipients.
+
 - Fixed a bug in handling patterns that are not after a blank line.
 
 Development of this version has been sponsored by FutureQuest, Inc.
